# garza-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  deploy.yml
garza_mcp/: __init__.py  auth.py  config.py  server.py
garza_mcp/services/: __init__.py  beeper_api.py  beeper_db.py  drive.py  fabric.py  mail.py  nextcloud.py  quo.py  voicenotes.py
src/: index.ts
src/services/: beeper-db-service.ts  beeper-service.ts  drive-service.ts  fabric-service.ts  freescout-service.ts  imap-service.ts  nextcloud-service.ts  quo-service.ts  smtp-service.ts  voicenotes-service.ts
src/types/: index.ts
src/utils/: helpers.ts  logger.ts
